# BitcoinMinerSimulator

./: README.md
Classic_C_IterativeV1/miner/: Definitions.h  List.c  List.h  Makefile  MultiThreading.sln  MultiThreading.vcxproj  MultiThreading.vcxproj.filters  main.c  miner  siggen.h  transaction.c  transaction.h
Classic_C_IterativeV2/miner/: CMakeCache.txt  CMakeLists.txt  Makefile  MinerMultiThread.sln  MinerMultiThread.vcxproj  MinerMultiThread.vcxproj.filters  block.c  block.h  cmake_install.cmake  list.c  list.h  main.c  siggen.c  transaction.c  transaction.h
